algorithm: add reference

--- a/src/temporarily/导师计划--数据结构和算法系列（下）.md
+++ b/src/temporarily/导师计划--数据结构和算法系列（下）.md
@@ -348,7 +348,7 @@ function binSearch(arr, data){
 }
 ```
 
-至此，导师计划--数据结构和算法已经完结。后期的话会在另一篇文章中补充一下各个算法的时间复杂度的比较（不作为课程讲解，要动笔算算的，而且也就是总结一个表而已），当然你可以查看文章[算法的时间复杂度](https://juejin.im/post/5c3405a3518825253315d61c)来自行理解，并去总结。
+至此，导师计划--数据结构和算法已经完结。后期的话会在另一篇文章中补充一下各个算法的时间复杂度的比较（不作为课程讲解，要动笔算算的，而且也就是总结一个表而已），当然你可以查看文章[算法的时间复杂度](https://juejin.im/post/5c3405a3518825253315d61c)来自行理解，并去总结。还推荐一篇文章--[学 [数据结构、算法] 的资源推荐](https://zhuanlan.zhihu.com/p/23191006)，其详细的罗列出你要学好数据结构和算法的相关资源。
 
 ![886](https://user-gold-cdn.xitu.io/2018/7/10/16481e2fa26f85d4)
 
